--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -163,7 +163,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                <button type="button" class="btn btn-success" id="btnToLogin">确定</button>
+                <a class="btn btn-primary" href="__CONTROLLER__/register.html">注册</a>
+                <button type="button" class="btn btn-success" id="btnToLogin">登录</button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
