Home module -- Initialize user cart page.

--- a/Application/Home/View/Index/cart.html
+++ b/Application/Home/View/Index/cart.html
@@ -5,7 +5,7 @@
         <div class="breadcrumbs-main">
             <ol class="breadcrumb">
                 <li><a href="__CONTROLLER__/index.html">主页</a></li>
-                <li class="active">购物车页面</li>
+                <li class="active">购物车</li>
             </ol>
         </div>
     </div>
@@ -15,7 +15,7 @@
 <div class="ckeckout">
     <div class="container">
         <div class="ckeck-top heading">
-            <h2>我的购物车</h2>
+            <h2>购物车</h2>
         </div>
         <div class="ckeckout-top">
             <div class="cart-items">
@@ -79,7 +79,7 @@
                                     <td>Bangalore</td>
                                     <td>Tanmay</td>
                                     <td><input style="width:160px;" type="number" class="form-control" id="goodsCount"
-                                               name="goodsCount" placeholder="数量" required></td>
+                                               name="goodsCount" placeholder="数量"></td>
                                     <td><input type="button" value="删除"/></td>
                                 </tr>
 
