--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -35,6 +35,7 @@
                        data-target="#loginDialog">&nbsp;登录&nbsp;</a></li>
             </notpresent>
             <else/>
+            <li><a class="navbar-link glyphicon glyphicon-cart" href="__CONTROLLER__/cart.html">&nbsp;购物车</a></li>
             <li><a class="navbar-link glyphicon glyphicon-user" href="javascript:void(0)">&nbsp;{$Think.session.user.usrName}</a>
             </li>
             <li><a class="navbar-link glyphicon glyphicon-log-out" href="#" id="btnLogout">&nbsp;登出&nbsp;</a></li>
