Home pages -- Remove useless links.

--- a/Application/Home/View/Index/single.html
+++ b/Application/Home/View/Index/single.html
@@ -106,7 +106,7 @@
                                     <div class="product-bottom">
                                         <h3>{$latest[$i]['gname']}</h3>
                                         <p>最新上架</p>
-                                        <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">￥ {$latest[$i]['gprice']|default="0.00"}</span>
+                                        <h4><span class=" item_price">￥ {$latest[$i]['gprice']|default="0.00"}</span>
                                         </h4>
                                     </div>
                                 </div>
@@ -125,7 +125,7 @@
                         <div class="product-bottom">
                             <h3>{$top3[$i]['gname']}</h3>
                             <p>近期热卖</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">￥ {$top3[$i]['gprice']}</span>
+                            <h4><span class=" item_price">￥ {$top3[$i]['gprice']}</span>
                             </h4>
                         </div>
                     </div>
