--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -63,7 +63,8 @@
                                             alt="{$list[$i+($row*4)]['gname']}"/></a>
                                     <div class="product-bottom">
                                         <h3>{$list[$i+($row*4)]['gname']}</h3>
-                                        <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">￥ {$list[$i+($row*4)]['gprice']|default="0.00"}</span>
+                                        <h4><span
+                                                class=" item_price">￥ {$list[$i+($row*4)]['gprice']|default="0.00"}</span>
                                         </h4>
                                     </div>
                                 </div>
