Home module -- import change for pages design.(Design by:JC wang)

--- a/Application/Home/View/Index/cart.html
+++ b/Application/Home/View/Index/cart.html
@@ -104,6 +104,12 @@
     </div>
     <!--end-ckeckout-->
     <!--information-starts-->
+    <div class="container">
+        <button type="button" class="btn btn-info">清空购物车</button>
+        <button type="button" class="btn btn-danger pull-right">结算购物车</button>
+        <br/>
+        <br/>
+        <br/>
 </div>
 
 <!-- 自定义modal提示框 -->
