--- a/Application/Home/View/Index/cart.html
+++ b/Application/Home/View/Index/cart.html
@@ -75,22 +75,23 @@
                                     </tr>
                                     <else/>
                                     <foreach name="data" item="v">
-                                    <tr>
-                                        <td>
-                                            <div class="col-md-4"></div>
-                                            <a href="__CONTROLLER__/single.html?goodsID={$v.goodsid}" target="_blank"
-                                               class="thumbnail col-md-4"><img src="{$v.goodsphoto}"
-                                                                               class="img-responsive" alt=""></a>
-                                            <div class="col-md-4"></div>
-                                        </td>
-                                        <td>{$v.goodsname}</td>
-                                        <td>￥ {$v.goodsprice}</td>
-                                        <td><input style="width:160px;" type="number" class="form-control"
-                                                   id="goodsCount" name="goodsCount" placeholder="数量"
-                                                   value="{$v.goodscount}"></td>
-                                        <td><input class="btnDelCartGoods" type="button" value="删除"
-                                                   data-value="{$v.goodsid}"/></td>
-                                    </tr>
+                                        <tr>
+                                            <td>
+                                                <div class="col-md-4"></div>
+                                                <a href="__CONTROLLER__/single.html?goodsID={$v.goodsid}"
+                                                   target="_blank"
+                                                   class="thumbnail col-md-4"><img src="{$v.goodsphoto}"
+                                                                                   class="img-responsive" alt=""></a>
+                                                <div class="col-md-4"></div>
+                                            </td>
+                                            <td>{$v.goodsname}</td>
+                                            <td>￥ {$v.goodsprice}</td>
+                                            <td><input style="width:160px;" type="number" class="form-control"
+                                                       id="goodsCount" name="goodsCount" placeholder="数量"
+                                                       value="{$v.goodscount}"></td>
+                                            <td><input class="btnDelCartGoods" type="button" value="删除"
+                                                       data-value="{$v.goodsid}"/></td>
+                                        </tr>
                                     </foreach>
                                 </empty>
                                 </tbody>
@@ -105,11 +106,14 @@
     <!--end-ckeckout-->
     <!--information-starts-->
     <div class="container">
-        <button type="button" class="btn btn-info">清空购物车</button>
-        <button type="button" class="btn btn-danger pull-right">结算购物车</button>
+        <button type="button" class="btn btn-success pull-right" style="margin-right: 5px">结算购物车</button>
+        <button type="button" class="btn btn-danger pull-right" style="margin-right: 5px" data-toggle="modal"
+                data-target="#clearCartDialog">清空购物车
+        </button>
         <br/>
         <br/>
         <br/>
+    </div>
 </div>
 
 <!-- 自定义modal提示框 -->
@@ -128,6 +132,23 @@
         </div><!-- /.modal-content -->
     </div><!-- /.modal -->
 </div>
+
+<!-- 自定义modal提示框 -->
+<div class="modal fade" id="clearCartDialog" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">清空购物车</h4>
+            </div>
+            <div class="modal-body">确定要清空购物车吗？</div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="btnToClearCart">确定</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
 <!-- jQuery -->
 <script src="__PUBLIC__/js/jquery.min.js"></script>
 <script language="JavaScript">
@@ -163,6 +184,27 @@
                     }
                 })
             }
+        });
+
+        $("#btnToClearCart").click(function () {
+            $.ajax({
+                url: "{:U('Order/clearCart')}",
+                dataType: 'json',
+                success: function (data) {
+                    $("#clearCartDialog").modal('hide');
+                    switch (data.response) {
+                        case 'success':
+                            $("#btnReload").prop('value', 'reload');
+                            $("#alertDialogMain").empty().append("清空成功！");
+                            break;
+                        case 'failed':
+                            $("#alertDialogMain").empty().append("抱歉，操作失败！");
+                            break;
+                    }
+
+                    $("#alertDialog").modal('show');
+                }
+            })
         });
     })
 </script>
