Home user cart page -- Now can show goods list by goods type.

--- a/Application/Home/View/Index/products.html
+++ b/Application/Home/View/Index/products.html
@@ -1,4 +1,3 @@
-
 <!--bottom-header-->
 <!--start-breadcrumbs-->
 <div class="breadcrumbs">
@@ -6,7 +5,7 @@
         <div class="breadcrumbs-main">
             <ol class="breadcrumb">
                 <li><a href="index.html">首页</a></li>
-                <li class="active">全部商品</li>
+                <li class="active">{$typeName}</li>
             </ol>
         </div>
     </div>
@@ -17,197 +16,35 @@
     <div class="container">
         <div class="prdt-top">
             <div class="col-md-12 prdt-left">
-                <div class="product-one">
-                    <div class="col-md-3 product-left p-left">
-                        <div class="product-main simpleCart_shelfItem">
-                            <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                    src="__PUBLIC__/images/p-1.png"
-                                                                    alt=""/></a>
-                            <div class="product-bottom">
-                                <h3>商品名</h3>
-                                <p>简介</p>
-                                <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-                            </div>
-                            <div class="srch srch1">
-                                <span>-50%</span>
-                            </div>
-                        </div>
+                <for start="0" end="$rowCount" name="row">
+                    <div class="product-one">
+                        <for start="0" end="4">
+                            <assign name="goodsID" value="$list[$i+($row*4)]['gid']"/>
+                            <notempty name="goodsID">
+                                <div class="col-md-3 product-left p-left">
+                                    <div class="product-main simpleCart_shelfItem">
+                                        <a href="__CONTROLLER__/single.html?goodsID={$goodsID}" class="mask"><img
+                                                class="img-responsive zoom-img" width="230"
+                                                height="230"
+                                                src="{$list[$i+($row*4)]['gphoto']}"
+                                                alt="{$list[$i+($row*4)]['gname']}"/></a>
+                                        <div class="product-bottom">
+                                            <h3>{$list[$i+($row*4)]['gname']}</h3>
+                                            <h4><span class=" item_price">￥ {$list[$i+($row*4)]['gprice']|default="0.00"}</span>
+                                            </h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </notempty>
+                        </for>
+                        <div class="clearfix"></div>
                     </div>
-                    <div class="col-md-3 product-left p-left">
-                        <div class="product-main simpleCart_shelfItem">
-                            <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                    src="__PUBLIC__/images/p-2.png"
-                                                                    alt=""/></a>
-                            <div class="product-bottom">
-                                <h3>商品名</h3>
-                                <p>简介</p>
-                                <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-                            </div>
-                            <div class="srch srch1">
-                                <span>-50%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 product-left p-left">
-                        <div class="product-main simpleCart_shelfItem">
-                            <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                    src="__PUBLIC__/images/p-3.png"
-                                                                    alt=""/></a>
-                            <div class="product-bottom">
-                                <h3>商品名</h3>
-                                <p>简介</p>
-                                <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-                            </div>
-                            <div class="srch srch1">
-                                <span>-50%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 product-left p-left">
-                        <div class="product-main simpleCart_shelfItem">
-                            <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                    src="__PUBLIC__/images/p-3.png"
-                                                                    alt=""/></a>
-                            <div class="product-bottom">
-                                <h3>商品名</h3>
-                                <p>简介</p>
-                                <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-                            </div>
-                            <div class="srch srch1">
-                                <span>-50%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="clearfix"></div>
-                </div>
-                <div class="product-one">
-                    <div class="col-md-3 product-left p-left">
-                        <div class="product-main simpleCart_shelfItem">
-                            <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                    src="__PUBLIC__/images/p-4.png"
-                                                                    alt=""/></a>
-                            <div class="product-bottom">
-                                <h3>商品名</h3>
-                                <p>简介</p>
-                                <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-                            </div>
-                            <div class="srch srch1">
-                                <span>-50%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 product-left p-left">
-                        <div class="product-main simpleCart_shelfItem">
-                            <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                    src="__PUBLIC__/images/p-5.png"
-                                                                    alt=""/></a>
-                            <div class="product-bottom">
-                                <h3>商品名</h3>
-                                <p>简介</p>
-                                <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-                            </div>
-                            <div class="srch srch1">
-                                <span>-50%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 product-left p-left">
-                        <div class="product-main simpleCart_shelfItem">
-                            <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                    src="__PUBLIC__/images/p-6.png"
-                                                                    alt=""/></a>
-                            <div class="product-bottom">
-                                <h3>商品名</h3>
-                                <p>简介</p>
-                                <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-                            </div>
-                            <div class="srch srch1">
-                                <span>-50%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 product-left p-left">
-                        <div class="product-main simpleCart_shelfItem">
-                            <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                    src="__PUBLIC__/images/p-3.png"
-                                                                    alt=""/></a>
-                            <div class="product-bottom">
-                                <h3>商品名</h3>
-                                <p>简介</p>
-                                <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-                            </div>
-                            <div class="srch srch1">
-                                <span>-50%</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="clearfix"></div>
-                </div>
-            </div>
-            <div class="product-one">
-                <div class="col-md-3 product-left p-left">
-                    <div class="product-main simpleCart_shelfItem">
-                        <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                src="__PUBLIC__/images/p-4.png"
-                                                                alt=""/></a>
-                        <div class="product-bottom">
-                            <h3>商品名</h3>
-                            <p>简介</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-                        </div>
-                        <div class="srch srch1">
-                            <span>-50%</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 product-left p-left">
-                    <div class="product-main simpleCart_shelfItem">
-                        <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                src="__PUBLIC__/images/p-5.png"
-                                                                alt=""/></a>
-                        <div class="product-bottom">
-                            <h3>商品名</h3>
-                            <p>简介</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-                        </div>
-                        <div class="srch srch1">
-                            <span>-50%</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 product-left p-left">
-                    <div class="product-main simpleCart_shelfItem">
-                        <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                src="__PUBLIC__/images/p-6.png"
-                                                                alt=""/></a>
-                        <div class="product-bottom">
-                            <h3>商品名</h3>
-                            <p>简介</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-                        </div>
-                        <div class="srch srch1">
-                            <span>-50%</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 product-left p-left">
-                    <div class="product-main simpleCart_shelfItem">
-                        <a href="single.html" class="mask"><img class="img-responsive zoom-img"
-                                                                src="__PUBLIC__/images/p-3.png"
-                                                                alt=""/></a>
-                        <div class="product-bottom">
-                            <h3>商品名</h3>
-                            <p>简介</p>
-                            <h4><a class="item_add" href="#"><i></i></a> <span class=" item_price">$ 329</span></h4>
-                        </div>
-                        <div class="srch srch1">
-                            <span>-50%</span>
-                        </div>
-                    </div>
-                </div>
+                </for>
                 <div class="clearfix"></div>
             </div>
         </div>
 
         <!--product-end-->
         <!--information-starts-->
+    </div>
+</div>
