--- a/Application/Home/View/Layout/layout.html
+++ b/Application/Home/View/Layout/layout.html
@@ -56,11 +56,11 @@
                 <div class="top-nav">
                     <ol class="nav nav-pills nav-justified">
                         <li class="grid"><a href="__CONTROLLER__/index.html" style="color:#000;">主页</a></li>
-                        <li class="grid"><a href="#" style="color:#000;">外国</a></li>
-                        <li class="grid"><a href="#" style="color:#000;">科幻</a></li>
-                        <li class="grid"><a href="#" style="color:#000;">侦探</a></li>
-                        <li class="grid"><a href="#" style="color:#000;">恐怖</a></li>
-                        <li class="grid"><a href="#" style="color:#000;">历史</a></li>
+                        <li class="grid"><a href="__CONTROLLER__/products.html?type=1" style="color:#000;">外国</a></li>
+                        <li class="grid"><a href="__CONTROLLER__/products.html?type=2" style="color:#000;">科幻</a></li>
+                        <li class="grid"><a href="__CONTROLLER__/products.html?type=3" style="color:#000;">侦探</a></li>
+                        <li class="grid"><a href="__CONTROLLER__/products.html?type=4" style="color:#000;">恐怖</a></li>
+                        <li class="grid"><a href="__CONTROLLER__/products.html?type=5" style="color:#000;">历史</a></li>
                     </ol>
                 </div>
                 <div class="clearfix"></div>
