--- a/Application/Home/View/Index/login.html
+++ b/Application/Home/View/Index/login.html
@@ -13,34 +13,31 @@
 <!--end-breadcrumbs-->
 <!--register-starts-->
 <div class="login">
-    <div class="container">
-        <div class="register-main">
-            <div class="col-md-4">
-
+    <div class="account">
+        <div class="container">
+            <div class="account-top heading">
+                <h2>用户登陆</h2>
             </div>
-            <div class="col-md-4 account-left"
-                 style="width:390px;height:280px; background-color:#2e2e2e; color:#FFF; margin-bottom:50px;">
-                <center>
-                    <div class="text">
-                        <h2><strong>用户登陆</strong></h2>
+            <div class="account-main">
+                <div class="col-md-6 account-left">
+                    <h3>已注册用户</h3>
+                    <div class="account-bottom">
+                        <input id="usrName" placeholder="账号" type="text" tabindex="3" required>
+                        <input id="usrPasswd" placeholder="密码" type="password" tabindex="4" required>
+                        <div class="address">
+                            <a class="forgot" href="#">忘记密码？</a>
+                            <input type="submit" id="pageBtnToLogin" value="登录">
+                        </div>
                     </div>
-                    <br/>
-                    <input id="usrName" placeholder="用户名" type="text" style="background-color:#fff;" required>
-                    <input id="usrPasswd" placeholder="密码" type="password" style="background-color:#fff;" required>
-
-                    <div class="address submit ">
-                        <input type="button" id="pageBtnToLogin" value="登录">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                        &nbsp; &nbsp; &nbsp;
-                        &nbsp; &nbsp; <a href="__CONTROLLER__/register.html" style="color:#FFF;">还没账号？点击注册-></a>
-                    </div>
-                </center>
+                </div>
+                <div class="col-md-6 account-right account-left">
+                    <h3>新用户？创建账号</h3>
+                    <p>可以使用手机号注册，也可以使用邮箱注册，选择手机号注册，您需要输入您的手机号码，根据页面提示完成注册；选择邮箱注册，您需要输入您的邮箱地址，根据页面提示完成注册；</p>
+                    <a href="__CONTROLLER__/register.html">注册账号</a>
+                </div>
+                <div class="clearfix"></div>
             </div>
-            <div class="col-md-4">
-
-            </div>
-            <div class="clearfix"></div>
         </div>
-        <br>
     </div>
 </div>
 <!--register-end-->
