--- a/Application/Home/View/Index/submitorder.html
+++ b/Application/Home/View/Index/submitorder.html
@@ -1,3 +1,4 @@
+
 <!--bottom-header-->
 <!--start-breadcrumbs-->
 <div class="breadcrumbs">
@@ -17,27 +18,10 @@
         <div class="ckeck-top heading">
             <h2>确认订单信息</h2>
         </div>
-        <p>选择收货地址</p>
-        <div class="radio radio-info radio-inline">
-            <input type="radio" id="inlineRadio1" value="option1" name="radioInline" checked>
-            <label for="inlineRadio1"> 非洲 </label>
-        </div>
-        <div class="radio radio-inline">
-            <input type="radio" id="inlineRadio2" value="option2" name="radioInline">
-            <label for="inlineRadio2"> 欧洲 </label>
-        </div>
-        <div class="radio radio-inline">
-            <input type="radio" id="inlineRadio3" value="option3" name="radioInline">
-            <label for="inlineRadio3"> 东南亚 </label>
-        </div>
-        <div class="radio radio-inline">
-            <input type="radio" id="inlineRadio4" value="option4" name="radioInline">
-            <label for="inlineRadio4"> 印度 </label>
-        </div>
+        <p>请填写收货地址</p>
+        <input placeholder="详细地址" type="text" tabindex="3" required style="width:50%;">
 
-        <div class="text text-right">
-            <a href="#">添加新地址</a>
-        </div>
+
         <div class="ckeckout-top">
             <div class="cart-items">
                 <div class="in-check">
@@ -79,7 +63,10 @@
         </div>
     </div>
     <div class="container">
-        <button type="button" class="btn btn-default" disabled="disabled">￥价格</button>
+        <button type="button" class="btn btn-default pull-right" disabled="disabled">￥价格</button>
+    </div>
+    <br/>
+    <div class="container">
         <button type="button" class="btn btn-danger pull-right">提交订单</button>
         <button type="button" class="btn btn-link pull-right">←返回购物车</button>
         <br/>
