Home user cart page -- now can change goods count in this page immediately.

--- a/Application/Home/View/Index/make_order.html
+++ b/Application/Home/View/Index/make_order.html
@@ -1,4 +1,3 @@
-
 <!--bottom-header-->
 <!--start-breadcrumbs-->
 <div class="breadcrumbs">
@@ -18,8 +17,9 @@
         <div class="ckeck-top heading">
             <h2>确认订单信息</h2>
         </div>
-        <p>请填写收货地址</p>
-        <input placeholder="详细地址" type="text" tabindex="3" required style="width:50%;">
+        <p>收货地址<input placeholder="详细地址" type="text" tabindex="3" required style="width:50%;">&nbsp;
+            收货地址<input placeholder="详细地址" type="text" tabindex="3" required style="width:50%;">
+        </p>
 
 
         <div class="ckeckout-top">
@@ -49,7 +49,7 @@
                                     <td>Bangalore</td>
                                     <td>Tanmay</td>
                                     <td><input style="width:160px;" type="number" class="form-control" id="goodsCount"
-                                               name="goodsCount" placeholder="数量" required></td>
+                                               name="goodsCount" placeholder="数量" readonly></td>
                                     <td><input type="button" class="btn btn-danger" value="删除"/></td>
                                 </tr>
 
