--- a/Application/Home/View/Index/cart.html
+++ b/Application/Home/View/Index/cart.html
@@ -86,9 +86,11 @@
                                             </td>
                                             <td>{$v.goodsname}</td>
                                             <td>￥ {$v.goodsprice}</td>
-                                            <td><input style="width:160px;" type="number" class="form-control"
-                                                       id="goodsCount" name="goodsCount" placeholder="数量"
-                                                       value="{$v.goodscount}"></td>
+                                            <td><input style="width:160px;" type="number"
+                                                       class="form-control goodsCount" name="goodsCount"
+                                                       placeholder="数量"
+                                                       value="{$v.goodscount}" data-value="{$v.goodsid}" min="1"
+                                                       required></td>
                                             <td><input class="btnDelCartGoods" type="button" value="删除"
                                                        data-value="{$v.goodsid}"/></td>
                                         </tr>
@@ -106,7 +108,7 @@
     <!--end-ckeckout-->
     <!--information-starts-->
     <div class="container">
-        <button type="button" class="btn btn-success pull-right" style="margin-right: 5px">结算购物车</button>
+        <a class="btn btn-success pull-right" style="margin-right: 5px" href="__CONTROLLER__/makeOrder.html">结算购物车</a>
         <button type="button" class="btn btn-danger pull-right" style="margin-right: 5px" data-toggle="modal"
                 data-target="#clearCartDialog">清空购物车
         </button>
@@ -154,6 +156,24 @@
 <script language="JavaScript">
     var goodsID;
     $(function () {
+        $(".goodsCount").change(function () {
+            var goodsID = $(this).attr('data-value');
+            var goodsCount = $(this).val();
+
+            if (goodsID != '' && goodsCount != '') {
+                $.post("{:U('Order/changeGoodsCount')}",
+                    {
+                        goodsID: goodsID,
+                        goodsCount: goodsCount
+                    },
+                    function (data) {
+                        if (data.response == 'failed') {
+                            console.log('Change goods count failed!   goodsID:' + goodsID);
+                        }
+                    }, 'json');
+            }
+        });
+
         $(".btnDelCartGoods").click(function () {
             goodsID = $(this).attr('data-value');
             $("#delCartGoodsDialog").modal('show');
