Home user cart page -- set goodsCount max value.

--- a/Application/Home/View/Index/cart.html
+++ b/Application/Home/View/Index/cart.html
@@ -89,7 +89,7 @@
                                             <td><input style="width:160px;" type="number"
                                                        class="form-control goodsCount" name="goodsCount"
                                                        placeholder="数量"
-                                                       value="{$v.goodscount}" data-value="{$v.goodsid}" min="1"
+                                                       value="{$v.goodscount}" data-value="{$v.goodsid}" min="1" max="5"
                                                        required></td>
                                             <td><input class="btnDelCartGoods" type="button" value="删除"
                                                        data-value="{$v.goodsid}"/></td>
